--- a/pages/prompting/use-vars-inside-a-prompt.mdx
+++ b/pages/prompting/use-vars-inside-a-prompt.mdx
@@ -12,7 +12,7 @@ Demonstrates using variables to process video subtitles. The code uses two [JQ-f
 
 The processed data is then injected into a message prompt using `context` syntax, generating a summary of the video transcription. Results include generation metadata and usage statistics.
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
     const {
