--- a/pages/search/hybrid-search.mdx
+++ b/pages/search/hybrid-search.mdx
@@ -8,7 +8,7 @@ Combines both semantic and keyword search capabilities to provide comprehensive 
 ## Basic Search
 When you need results that match both concepts and exact terms, [Hybrid Search](/content-api/search/hybrid-search) is your solution. For example, searching for "AI in healthcare" will find documents that are conceptually about healthcare AI and contain those specific keywords. 
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
    ```typescript
    const {
@@ -69,7 +69,7 @@ When you need results that match both concepts and exact terms, [Hybrid Search](
 ## Advanced Search
 Sometimes you need to fine-tune your search results by combining semantic vectors with specific keyword matching. Using [Advanced Hybrid Search](/content-api/search/hybrid-search#advanced-usage), you can prioritize certain fields like titles and tags while maintaining semantic relevance. 
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
    ```typescript
    const {
