--- a/pages/search/keyword-search.mdx
+++ b/pages/search/keyword-search.mdx
@@ -9,7 +9,7 @@ Search based on exact keyword matches within your data, ideal for precise matchi
 ## Basic Search
 When you need to find documents containing specific terms exactly as written, [Keyword Search](/content-api/search/keyword-search) is your best option. For instance, searching for "machine learning" will return only documents that contain that exact phrase.
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
    ```typescript
    const {
@@ -67,7 +67,7 @@ When you need to find documents containing specific terms exactly as written, [K
 ## Field-Specific Search
 Sometimes you want to search for keywords only in certain parts of your documents - like titles or summaries - while ignoring the main content.
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
    ```typescript
    const {
