--- a/pages/search/similarity-search.mdx
+++ b/pages/search/similarity-search.mdx
@@ -8,7 +8,7 @@ Find similar content across text, images, and records based on their characteris
 ## Text Similarity
 When you want to find related documents based on their concepts, use text similarity search. For example, if you have a document about AI technology, use `similar.text()` to find other documents discussing related concepts like machine learning.
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
    ```typescript
    const {
@@ -84,7 +84,7 @@ When you want to find related documents based on their concepts, use text simila
 ## Advanced Text Similarity
 Sometimes you need to steer your search results toward specific themes while maintaining similarity. Use advanced text similarity with concept steering to fine-tune your results based on particular topics.
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
    ```typescript
    const {
@@ -173,7 +173,7 @@ Sometimes you need to steer your search results toward specific themes while mai
 ## Image Similarity
 When you need to find visually similar images regardless of their metadata, use `similar.image()` method. This helps you discover images with matching colors, objects, or compositions. [Learn more about Visual Similarity](/content-api/search/visual-similarity).
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
    ```typescript
    const {
@@ -263,7 +263,7 @@ When you need to find visually similar images regardless of their metadata, use 
 ## Record Similarity
 When you have a document you like and want to find similar ones, use `.similar.record()` method. [Learn more about Record Similarity](/content-api/search/record-similarity).
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
    ```typescript
    const {
