--- a/pages/working-with-images.mdx
+++ b/pages/working-with-images.mdx
@@ -10,7 +10,7 @@ Use Unbody's Image API powered by [Imgix](https://www.imgix.com/) to efficiently
 ## Basic Image Query
 When working with image collections, you need a quick way to retrieve essential information about your images. [Learn more about Image Fetching](/image-api/api-reference#example-1---fetching-your-image-url).
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
     const {
@@ -73,7 +73,7 @@ When working with image collections, you need a quick way to retrieve essential 
 ## Similar Image Search
 When you want to find visually similar images based on a reference image, such as exploring a collection of electric vehicles, this method allows you to retrieve images that share visual characteristics. [Learn more about Visual similarity](/content-api/search/visual-similarity)
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
     const {
