--- a/pages/working-with-videos.mdx
+++ b/pages/working-with-videos.mdx
@@ -9,7 +9,7 @@ Use Unbody's Video API powered by [Mux](https://www.mux.com) to work with video 
 ## Fetch Video Assets
 Retrieve video thumbnails and animated preview images with size filtering to optimize loading times.
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
     const {
@@ -77,7 +77,7 @@ Retrieve video thumbnails and animated preview images with size filtering to opt
 ## Access Video Subtitles
 Fetch and work with video subtitles, including timing and text content. This example filters videos by type and size.
 
-<Tabs items={['Unbody SDK', 'GraphQL']}>
+<Tabs items={['SDK (.ts)', 'GraphQL']}>
   <Tabs.Tab>
     ```typescript
     const {
