--- a/pages/content-api/q-n-a.mdx
+++ b/pages/content-api/q-n-a.mdx
@@ -1,4 +1,5 @@
 import { Tab, Tabs } from "@nextui-org/react";
+import { Callout } from "nextra/components";
 
 # Generative QnA
 
@@ -133,3 +134,7 @@ Both the JavaScript SDK and GraphQL responses for an `ask{}` query include detai
         ```
     </Tab>
 </Tabs>
+
+<Callout type="info">
+   QnA Module must be configured during project creation to use Generative QnA.
+</Callout>
