fix: data ingestion links and types

--- a/pages/data-ingestion/overview.mdx
+++ b/pages/data-ingestion/overview.mdx
@@ -20,9 +20,10 @@ Unbody provides ready-to-use connectors for popular platforms. These save you ti
 
 Current integrations include:
 
-- **Google Drive**: Ingest files and documents. Learn more
-- **Discord**: Import messages and content. Learn more
-- **GitHub**: Extract repositories and related data. Learn more
+- [**Google Drive**](/providers/google-drive): Ingest files and documents.
+- [**Discord**](/providers/google-calendar): Import messages and content.
+- [**GitHub**](/providers/github): Extract repositories and related data.
+- [**Google Calendar**](/providers/google-calendar): Extract calendar events data.
 
 *New integrations are added regularly.*
 
@@ -30,9 +31,9 @@ Current integrations include:
 
 ### 2. Custom Ingestion with Push API
 
-For everything else, there’s the **Push API**. Use this when you need to:
+For everything else, there’s the [**Push API**](/data-ingestion/push-api). Use this when you need to:
 
 - Define custom schemas for your data.
 - Ingest data in any format, structured or unstructured.
 
-The Push API is flexible and works with non-standard or unique data sources. Learn more about the Push API.
+The Push API is flexible and works with non-standard or unique data sources.
