--- a/pages/data-ingestion/prebuilt-integrations.mdx
+++ b/pages/data-ingestion/prebuilt-integrations.mdx
@@ -1,6 +1,8 @@
+import { Cards } from 'nextra/components'
+
 # Prebuilt Integrations
 
-Prebuilt integrations—referred to as **data providers** in Unbody—make it easy to connect and ingest data from widely used platforms. These providers handle the complexities of data ingestion, letting you focus on building your application.
+Prebuilt integrations—referred to as [**data providers**](/providers/overview) in Unbody—make it easy to connect and ingest data from widely used platforms. These providers handle the complexities of data ingestion, letting you focus on building your application.
 
 Unbody's prebuilt data providers are designed to work seamlessly, no extra configuration required.
 
@@ -10,23 +12,39 @@ Unbody's prebuilt data providers are designed to work seamlessly, no extra confi
 
 Current prebuilt providers include:
 
-- **Google Drive**
-    
-    Ingest files and documents directly from your Google Drive account.
-    
-    [Learn More →](/providers/google-drive)
-    
-- **Discord**
-    
-    Pull messages and content from Discord channels for applications like chat analysis or moderation tools.
-    
-    [Learn More →](/providers/discord)
-    
-- **GitHub**
-    
-    Import repositories, commit histories, and metadata as inputs for AI workflows.
-    
-    [Learn More →](/providers/github)
+<Cards className="grid grid-cols-2 gap-4">
+   <Cards.Card title={"Google Drive"}
+               href={"/providers/google-drive"}
+               arrow={true}>
+       <div className={"mx-4 text-sm [&>*]:leading-5 leading-1 opacity-75"}>
+           Ingest files and documents directly from your Google Drive account
+       </div>
+   </Cards.Card>
+   
+   <Cards.Card title={"Discord"}
+               href={"/providers/discord"}
+               arrow={true}>
+       <div className={"mx-4 text-sm [&>*]:leading-5 leading-1 opacity-75"}>
+           Pull messages and content from Discord channels for chat analysis or moderation
+       </div>
+   </Cards.Card>
+   
+   <Cards.Card title={"GitHub"}
+               href={"/providers/github"}
+               arrow={true}>
+       <div className={"mx-4 text-sm [&>*]:leading-5 leading-1 opacity-75"}>
+           Import repositories, commit histories, and metadata for AI workflows
+       </div>
+   </Cards.Card>
+   
+   <Cards.Card title={"Google Calendar"}
+               href={"/providers/google-calendar"}
+               arrow={true}>
+       <div className={"mx-4 text-sm [&>*]:leading-5 leading-1 opacity-75"}>
+           Extract and process calendar events data
+       </div>
+   </Cards.Card>
+</Cards>
     
 
 For a full list of data providers and their capabilities, visit the [Data Providers Section →](/providers/overview).
@@ -37,7 +55,7 @@ For a full list of data providers and their capabilities, visit the [Data Provid
 
 1. **Connect a Data Provider**:
     
-    Use the Unbody dashboard to link your account with a supported platform.
+    Use the [Unbody dashboard](https://app.unbody.io/) to link your account with a supported platform.
     
 2. **Select Data Sources**:
     
@@ -55,4 +73,4 @@ For a full list of data providers and their capabilities, visit the [Data Provid
 Unbody regularly expands its list of prebuilt data providers. If your platform isn’t listed, you can:
 
 - Request a new provider through the [Data Providers Section](/providers/overview).
-- Use the **Push API** to create custom ingestion workflows.
+- Use the [**Push API**](/data-ingestion/push-api) to create custom ingestion workflows.
