--- a/pages/data-ingestion/push-api.mdx
+++ b/pages/data-ingestion/push-api.mdx
@@ -1,3 +1,5 @@
+# Push Api
+
 The `unbody/push` package provides an easy-to-use interface to manually upload files and push custom data into your projects.
 
 - **Uploading Files**: Manually upload and manage files like images and videos.
