--- a/pages/project-configurations/enhancers.mdx
+++ b/pages/project-configurations/enhancers.mdx
@@ -244,6 +244,6 @@ new Enhancement.Action.StructuredGenerator({
 3. **Testing**:
     - Test pipelines on a small dataset before deployment.
 
----
+{/* ---
 
-With this structure, every detail is covered comprehensively. Let me know if more areas need elaboration!
+With this structure, every detail is covered comprehensively. Let me know if more areas need elaboration! */}
