--- a/pages/project-configurations/generative-modules.mdx
+++ b/pages/project-configurations/generative-modules.mdx
@@ -52,7 +52,7 @@ You can configure Generative Modules via the Dashboard or the Admin API.
 
 To enable Generative Modules:
 
-1. Go to your **Project Settings** in the Dashboard.
+1. Go to your [**Project Settings**](https://app.unbody.io/projects) in the Dashboard.
 2. Navigate to the **Generative Modules** section.
 3. Select and configure a model provider (e.g., OpenAI GPT-4 or Cohere Command).
 4. Save your settings.
@@ -106,7 +106,9 @@ Unbody supports multiple providers and models. Below is a list of supported opti
 | **Cohere** | Command | Optimized for content generation tasks. |
 | **Mistral** | OpenMixtral 8x7b | Lightweight, scalable option for RAG. |
 
-For a full list of available models, refer to the [Model Reference Documentation](/project-configurations/generative-modules).
+{/* 
+TODO: Don't know where is the full list
+For a full list of available models, refer to the [Model Reference Documentation](/project-configurations/generative-modules). */}
 
 ---
 
