fix: enhancement pipeline

--- a/pages/content-api/q-n-a.mdx
+++ b/pages/content-api/q-n-a.mdx
@@ -136,5 +136,5 @@ Both the JavaScript SDK and GraphQL responses for an `ask{}` query include detai
 </Tabs>
 
 <Callout type="info">
-   QnA Module must be configured during project creation to use Generative QnA.
+   QnA must be configured during project creation to use Generative QnA. Configure QnA using [Dashboard](https://app.unbody.io/projects) or [Admin API](http://localhost:3001/admin-api#qna-configuration)
 </Callout>
