--- a/pages/generative-and-rag/json.mdx
+++ b/pages/generative-and-rag/json.mdx
@@ -3,7 +3,7 @@ import { Tabs } from "nextra/components"
 
 # JSON Generation
 
-Generate structured JSON content based on prompts, messages, or schemas. Useful for creating API responses, structured records, or documents.
+Generate structured JSON content based on prompts, messages, or [custom schemas](/project-configurations/custom-schemas). Useful for creating API responses, structured records, or documents.
 
 ## Basic JSON Generation
 When you need to generate structured data with specific fields, use schema-based generation. This ensures the output follows your required format with proper data types. [Learn more about basic JSON generation](/generative-api/json-gen#example-1---prompt-with-plain-schema).
