--- a/pages/generative-and-rag/text.mdx
+++ b/pages/generative-and-rag/text.mdx
@@ -31,7 +31,7 @@ const {
 </Collapse>
 
 ## Generation with Options
-Sometimes you need more control over the generated content. Use options like temperature and token limits to fine-tune the output style and length. [Learn more about Options](/generative-api/text-gen#options)
+Sometimes you need more control over the generated content. Use [options](/generative-api/text-gen#options) like temperature and token limits to fine-tune the output style and length. 
 
 ```typescript
 const {
