fix: rag with generative search

--- a/pages/content-api/generative.mdx
+++ b/pages/content-api/generative.mdx
@@ -238,7 +238,7 @@ query {
 
 ### Using `vars`
 
-The `vars` option allows you to transform query results into JSON-serializable data, which can then be referenced in the messages' content. This feature enables dynamic data injection into the conversation using the formatter(Currently, the only supported formatter is [jq](https://jqlang.github.io/jq/)).
+The `vars` option allows you to transform query results into JSON-serializable data, which can then be referenced in the messages content. This feature enables dynamic data injection into the conversation using the formatter(Currently, the only supported formatter is [jq](https://jqlang.github.io/jq/)).
 
 Each `var` has the following properties:
 
